JDI test com/sun/jdi/ProcessAttachTest.sh and other 3 jdi tests failed in nightly

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: core-svc
    • b15
    • Verified

      TESTFAIL:com/sun/jdi/ProcessAttachTest.sh

      com/sun/jdi/ProcessAttachTest.sh failed in all platform, but will cause JDI jobs hung both at windows32 and windows 64 platform.

      How to reproduce:
      1. Login a windows machine
      2. Run jtreg -jdk:/cygdrive/c/Users/aurora/CommonData/jdk com/sun/jdi/ProcessAttachTest.sh
      3. run ps -ef to check whether Java process have closed.
      4. the java process still running after 20 minutes.

      There are also other 3 tests failed which are
      com/sun/jdi/ExclusiveBind.java
      com/sun/jdi/JITDebug.sh
      com/sun/jdi/RunToExit.java

      detail please refer comments and attachment log file.

            Assignee:
            Dmitriy Samersoff
            Reporter:
            Kevin Liu (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: