8043716: JDI test com/sun/jdi/ProcessAttachTest.sh and other 3 jdi tests failed in nightly

InetAddress.getLocalHost() returns configured host name instead of localhost.

Reviewed-by: dcubed